# My2DEngine

./: .gitignore  CMakeLists.txt
My2DEngine/: CMakeLists.txt  Components.h  GameEngine.cpp  GameEngine.h  MovementSystem.cpp  MovementSystem.h  My2DEngine.cpp  My2DEngine.h  Settings.ini  temp.cpp
